[gd_scene load_steps=9 format=3 uid="uid://cxodetp2amu0b"]

[ext_resource type="Script" uid="uid://dcs6md7y101p0" path="res://scenes/characters/insects/fly/fly.gd" id="1_w51ox"]
[ext_resource type="Texture2D" uid="uid://cd56fsp6eyvut" path="res://scenes/characters/insects/fly/fly.png" id="2_p35g7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_igwbq"]
atlas = ExtResource("2_p35g7")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dupb6"]
atlas = ExtResource("2_p35g7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2pv3"]
atlas = ExtResource("2_p35g7")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_p35g7"]
atlas = ExtResource("2_p35g7")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_02vym"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_igwbq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dupb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2pv3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_p35g7")
}],
"loop": true,
"name": &"fly",
"speed": 15.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_v0pvl"]
radius = 8.0

[node name="Fly" type="Area2D" groups=["edibles"]]
script = ExtResource("1_w51ox")

[node name="LifeTimer" type="Timer" parent="."]
wait_time = 20.0

[node name="StateTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="AnimSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -4)
sprite_frames = SubResource("SpriteFrames_02vym")
animation = &"fly"
autoplay = "fly"
frame_progress = 0.677668

[node name="Cls" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_v0pvl")
